# Real-Estate-Market-Timing-Investment-Risk-Stratification

./: .gitignore  LICENSE  MODELING-QUICK-START.md  README.md  charlotte_cleaned_data.csv  charlotte_data.csv  charlotte_preprocessed.csv  classification_test.csv  classification_train.csv  lstm_timeseries.csv  model_config.json  project-notebook.ipynb  pyproject.toml  regression.ipynb  regression_test.csv  regression_train.csv  requirements.txt  scaler.pkl  tsa_test.csv  tsa_train.csv
config/: best_gru_model_config.json  cfg.yaml
data/processed/: charlotte_preprocessed.csv  classification_test.csv  classification_train.csv  experiment_results.csv  regression_test.csv  regression_train.csv  tsa_test.csv  tsa_train.csv
models/: arch_search_gru_model.pth  gru_1.pth  gru_2  gru_model_r2_0995.pt  scaler.pkl
notebooks/: classification.ipynb  experiment_checkpoint.csv  experiment_results.csv  project-notebook.ipynb  regression2.ipynb  time_series.ipynb  time_series_divya.ipynb  time_series_divya_detailed.ipynb
